# book

./: .cursorrules  .gitignore  404.html  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  hashmap.json  index.html  package-lock.json  package.json  vitest.config.ts  《永恒道途》世界地图与势力分布.md  《永恒道途》人物详细设定集.md  《永恒道途》修仙小说完整大纲（修订版）.md  《永恒道途》写作计划表.md  《永恒道途》分卷细纲与章节规划.md  《永恒道途》卷章命名总表.md  《永恒道途》文笔修炼指南.md  《永恒道途》文笔参考——双文本叙事技法研究.md  《永恒道途》文笔参考——逆天邪神真实风格解析.md  《永恒道途》文笔素材库.md  《永恒道途》设定核查清单.md
.claude/: settings.local.json
.githooks/: pre-commit  pre-push
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/ide-plugins/: code-oss-wheel-injection.js  manifest.json
apps/desktop/src-tauri/src/: bridge.rs  close_behavior.rs  database.rs  ide_integration.rs  lib.rs  main.rs  models.rs  updater.rs
assets/: app.BuDbq0Fo.js  app.C1SxJNYn.js  app.C8Cn6iuy.js  app.CXr-W7N0.js  app.Cv4xxPt1.js  app.u08XKshs.js  index.md.CjpUANL3.js  index.md.YOzyLx0m.js  parser.worker-DspdpWrB.js  style.BmMGiqNp.css  style.Cs2g-ula.css  style.DHFnvM9E.css  style.YKKILfHo.css  剑来_index.md.sKGhLEDv.js  剑来_正文_0001-0099_第0064章-三陈.md.SgxOvFmh.js  剑来_正文_0001-0099_第0064章-三陈.md.SgxOvFmh.lean.js  剑来_正文_0001-0099_第0065章-珠子.md.CPnCEM41.js  剑来_正文_0001-0099_第0065章-珠子.md.CPnCEM41.lean.js  剑来_正文_0001-0099_第0066章-抬头.md.BdhcyRxU.js  剑来_正文_0001-0099_第0066章-抬头.md.BdhcyRxU.lean.js  剑来_正文_0001-0099_第0067章-远行.md.Cqe1rl2U.js  剑来_正文_0001-0099_第0067章-远行.md.Cqe1rl2U.lean.js  剑来_正文_0001-0099_第0068章-天下有春.md.MIuJM5fm.js  (+2529 more)
docs/: Android正式签名管理.md  (+11 more)
(+2684 files in other folders)
