[package]
name = "novel-library-desktop"
version = "0.1.0"
description = "Local-first desktop novel library"
authors = ["Novel Library"]
edition = "2021"

[lib]
name = "novel_library_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
uuid = { version = "1.23.5", features = ["v4"] }
