[package]
name = "novel-library-desktop"
version = "0.6.2"
description = "Local-first desktop novel library"
authors = ["Novel Library"]
edition = "2021"

[lib]
name = "novel_library_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
futures-util = "0.3"
rusqlite = { version = "0.40.1", features = ["backup", "bundled"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
uuid = { version = "1.23.5", features = ["v4"] }
winreg = "0.55"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
